<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <include layout="@layout/austria"/>

        <TextView
            android:id="@+id/austria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/austria"
            android:textColor="@color/black"/>

        <include layout="@layout/poland"/>
        <TextView
            android:id="@+id/poland"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/poland"
            android:textColor="@color/black"/>

        <include layout="@layout/italy"/>
        <TextView
            android:id="@+id/italy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/italy"
            android:textColor="@color/black"/>

        <include layout="@layout/colombia"/>
        <TextView
            android:id="@+id/colombia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/colombia"
            android:textColor="@color/black"/>

        <include layout="@layout/madagascar"/>
        <TextView
            android:id="@+id/madagasсar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/madagasсar"
            android:textColor="@color/black"/>

        <include layout="@layout/thailand"/>
        <TextView
            android:id="@+id/thailand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/thailand"
            android:textColor="@color/black"/>

        <include layout="@layout/denmark"/>
        <TextView
            android:id="@+id/denmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/denmark"
            android:textColor="@color/black"/>

        <include layout="@layout/switzerland"/>
        <TextView
            android:id="@+id/switzerland"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:text="@string/switzerland"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>